--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 buildscript {
-    repositories {
-        mavenCentral()
-    }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.12.+'
+        classpath 'com.android.tools.build:gradle:1.0.0'
     }
+}
+repositories {
+    mavenCentral()
 }
 apply plugin: 'android'
 android {
@@ -38,4 +38,8 @@ android {
     dependencies {
         compile fileTree(dir: 'libs', include: '*.jar')
     }
+}
+
+dependencies {
+    compile 'com.github.amlcurran.showcaseview:library:5.0.0'
 }
