--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,8 @@ repositories {
 }
 apply plugin: 'android'
 android {
-    compileSdkVersion 19
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 21
+    buildToolsVersion "21.0.0"
 
     sourceSets {
         main {
@@ -42,4 +42,5 @@ android {
 
 dependencies {
     compile 'com.github.amlcurran.showcaseview:library:5.0.0'
+    compile 'com.android.support:appcompat-v7:21.+'
 }
