sample items added

--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     compile 'com.github.amlcurran.showcaseview:library:5.0.0'
     compile 'com.melnykov:floatingactionbutton:1.1.0'
     compile 'com.android.support:appcompat-v7:21.+'
+    compile 'com.google.code.gson:gson:2.3+'
 }
